--- a/package.json
+++ b/package.json
@@ -9,19 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    
+    "@hookform/resolvers": "^3.10.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@svgr/webpack": "^8.1.0",
-    
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
